--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -27,6 +28,32 @@
         navigator.serviceWorker.register('flutter_service_worker.js');
       });
     }
+  </script>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-analytics.js"></script>
+  <script src="/__/firebase/7.15.5/firebase-firestore.js"></script>
+
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyDUbijW7BLBWl9RDYZBUfHFmXlT1IjHen4",
+      authDomain: "app-codigos-75538.firebaseapp.com",
+      databaseURL: "https://app-codigos-75538.firebaseio.com",
+      projectId: "app-codigos-75538",
+      storageBucket: "app-codigos-75538.appspot.com",
+      messagingSenderId: "1081912221905",
+      appId: "1:1081912221905:web:3f23cbc5a5c0e9df3be5f0",
+      measurementId: "G-T9HE4ZMEH0"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
